all sections in place, need to fix alignment and size

--- a/styles.css
+++ b/styles.css
@@ -75,17 +75,44 @@ body{
     background-color: #e5e7eb;
     color: #1f2937;
     font-size: 36px;
+    display: flex;
+    flex-direction: column;
+    padding:0 200px;
+    
 
 }
 .containerthree div{
-    align-items: right;
+    text-align: right;
+    padding-bottom: 20px;
+    padding-right: 20px;
 }
 
 .containerfour{
     background: #3882f6;
-    padding: 16px;
-    height: 40px;
-    width: 800px;
+    padding: 10px 80px;
+    margin: 50px 200px;
     display: flex;
+    align-items: center;
+    border-radius: 5px;
+    color: white;
 }
+.action{
+    flex: 1;
+    text-align: left;
+}
+.action p{
+    margin: 5px 30px 30px 50px;
+}
+h2{
+    margin: 30px 0px 0px 50px;
+}
+.act_button button{
+    background-color: #3882f6;
+    border-radius: 25px;
+    color: white;
+    padding: 5px 25px;
+    border-color: white;
+}
+
+
 
